infra/manifests/github-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-webhook
  namespace: github-webhook
  annotations:
    moonrepo.dev/skip-local: "true"
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: github-webhook
spec:
  type: ClusterIP
  selector:
    app: github-webhook
  ports:
    - port: 3200
      targetPort: 3200
      protocol: TCP
      name: http
